--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
 
 <body>
     <section>
-        <nav class="navbar navbar-expand-lg bg-warning">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-md bg-warning">
+            <div class="container-fluid mx-2 d-flex justify-content-between">
                 <a class="navbar-brand" href="#">
-                    <img class="" src="./Assets/logo.svg" alt="">
+                    <img class="w-50" src="./Assets/logo.svg" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-2">
+                <div class="collapse navbar-collapse container" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-4 d-flex justify-content-between">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link btn" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link btn" href="#">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">NewsLetter</a>
+                            <a class="nav-link btn" href="#">NewsLetter</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Booking Info</a>
+                            <a class="nav-link btn" href="#">Booking Info</a>
                         </li>
                     </ul>
-                    <form class="d-flex" role="search">
+                    <form class="d-lg-flex d-md-none" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
