--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link btn" href="#">Booking Info</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link btn" id="red-btn" href="#">Explore Adventures</a>
+                        </li>
                     </ul>
                     <form class="d-lg-flex d-md-none" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
