--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <section>
-        <nav class="navbar navbar-expand-md bg-warning">
+        <nav class="navbar navbar-expand-md bg-warning py-3">
             <div class="container-fluid mx-2 d-flex justify-content-between">
                 <a class="navbar-brand" href="#">
                     <img class="w-50" src="./Assets/logo.svg" alt="">
@@ -25,23 +25,24 @@
                 <div class="collapse navbar-collapse container" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-4 d-flex justify-content-between">
                         <li class="nav-item">
-                            <a class="nav-link btn" aria-current="page" href="#">Home</a>
+                            <a class="btn btn-dark nav-link" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn" href="#">About Us</a>
+                            <a class="btn btn-dark nav-link " href="#">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn" href="#">NewsLetter</a>
+                            <a class="btn btn-dark nav-link" href="#">NewsLetter</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn" href="#">Booking Info</a>
+                            <a class="btn btn-dark nav-link" href="#">Booking Info</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn" id="red-btn" href="#">Explore Adventures</a>
+                            <a class="btn btn-danger nav-link" href="#">Explore Adventures</a>
                         </li>
                     </ul>
-                    <form class="d-lg-flex d-md-none" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                    <form class="d-xl-flex d-md-none" role="search">
+                        <input class="form-control me-2 my-4 my-md-0" type="search" placeholder="Search"
+                            aria-label="Search" />
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
                 </div>
