--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<header>
     <section>
         <nav class="navbar navbar-expand-md bg-warning py-3">
             <div class="container-fluid mx-2 d-flex justify-content-between">
@@ -49,6 +49,25 @@
             </div>
         </nav>
     </section>
+</header>
+
+<body class="bg-black text-white">
+    <section class="text-center d-flex flex-column justify-content-center align-items-center">
+        <h1 class="display-1">
+            Push Your Limits with SkyHigh Adventures
+        </h1>
+        <p>
+            Unleash your inner adventurer with curated experiences designed to challenge and inspire.
+        </p>
+        <button class="btn btn-warning py-1 d-flex justify-content-center mb-4">
+            Book Now
+        </button>
+        <img src="/Image/pexels-trksami-14814440.jpg" class="container-fluid d-sm-mb-0 d-lg-mb-0" alt="">
+    </section>
+
+
+
+
 
 
 
