--- a/index.html
+++ b/index.html
@@ -52,17 +52,20 @@
 </header>
 
 <body class="bg-black text-white">
-    <section class="text-center d-flex flex-column justify-content-center align-items-center">
-        <h1 class="display-1">
-            Push Your Limits with SkyHigh Adventures
-        </h1>
-        <p>
-            Unleash your inner adventurer with curated experiences designed to challenge and inspire.
-        </p>
-        <button class="btn btn-warning py-1 d-flex justify-content-center mb-4">
-            Book Now
-        </button>
-        <img src="/Image/pexels-trksami-14814440.jpg" class="container-fluid d-sm-mb-0 d-lg-mb-0" alt="">
+    <section class="text-center">
+        <div id="hero"
+            class="d-flex flex-column justify-content-center align-items-center container p-0 col-sm-9 col-lg-6 py-5">
+            <h1 class="display-1">
+                Push Your Limits with SkyHigh Adventures
+            </h1>
+            <p class="fs-2">
+                Unleash your inner adventurer with curated experiences designed to challenge and inspire.
+            </p>
+            <button class="btn btn-warning py-1 d-flex justify-content-center mb-4">
+                Book Now
+            </button>
+        </div>
+        <img src="/Image/pexels-trksami-14814440.jpg" class="container-fluid p-0" alt="">
     </section>
 
 
