--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<header>
-    <section>
+
+<body class="bg-black text-white">
+    <header>
         <nav class="navbar navbar-expand-md bg-warning py-3">
             <div class="container-fluid mx-2 d-flex justify-content-between">
                 <a class="navbar-brand" href="#">
@@ -48,25 +49,20 @@
                 </div>
             </div>
         </nav>
-    </section>
-</header>
-
-<body class="bg-black text-white">
-    <section class="text-center">
-        <div id="hero"
-            class="d-flex flex-column justify-content-center align-items-center container p-0 col-sm-9 col-lg-6 py-5">
+    </header>
+    <main>
+        <section id="hero" class=" d-flex flex-column justify-content-center align-items-center text-center">
             <h1 class="display-1">
                 Push Your Limits with SkyHigh Adventures
             </h1>
-            <p class="fs-2">
+            <p class="fs-3 lead my-4 container-md">
                 Unleash your inner adventurer with curated experiences designed to challenge and inspire.
             </p>
-            <button class="btn btn-warning py-1 d-flex justify-content-center mb-4">
+            <button class="btn btn-warning mb-4 btn-lg fs-3 btn-square">
                 Book Now
             </button>
-        </div>
-        <img src="/Image/pexels-trksami-14814440.jpg" class="container-fluid p-0" alt="">
-    </section>
+        </section>
+    </main>
 
 
 
